# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  help_for_me.txt  pyproject.toml  setup.py
brain_games/: cli.py  const.py  constants.py  engine.py  logic_work.py
brain_games/games/: calc.py  even.py  games.py  games_calc.py  games_even.py  games_gcd.py  games_prime.py  games_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
