[tool.poetry]
name = "belousovromnik_brain_games"
version = "0.0.9"
description = ""
authors = ["belousov romnik <belousov.romnik@yandex.ru>"]
packages = [
{include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4.4"
pylint = "^2.4.4"
flake8 = "^3.7.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

