[tool.poetry]
name = "belousovromnik_brain_games"
version = "0.1.1"
description = "Python. Leaning project №1"
authors = ["belousov romnik <belousov.romnik@yandex.ru>"]
repository = 'https://github.com/belousovromnik/python-project-lvl1'
packages = [
{include = "brain_games" },
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4.4"
pylint = "^2.4.4"
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

